
    HDFS-6141. WebHdfsFileSystem#toUrl does not perform character escaping.
    (cnauroth)

    HADOOP-10562. Namenode exits on exception without printing stack trace
    in AbstractDelegationTokenSecretManager. (Suresh Srinivas via
    Arpit Agarwal)

    MAPREDUCE-5877. Inconsistency between JT/TT for tasks taking a long time to
    launch (Karthik Kambatla via Sandy Ryza)

Release 1.2.2 - unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES 

    MAPREDUCE-5450. Unnecessary Configuration instantiation in IFileInputStream
    slows down merge. (Stanislav Barton and Ted Yu via Sandy Ryza)

Release 1.2.1 - 2013.07.15

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-4880. Print the image and edits file loaded by the namenode in the
    logs. (Arpit Agarwal via suresh)

    MAPREDUCE-4838. Addendum patch to fix TestRumenJobTraces.
    (Arun C Murthy)

  BUG FIXES

    MAPREDUCE-5256. CombineInputFormat isn't thread safe affecting HiveServer.
    (Vinod Kumar Vavilapalli, via mattf)

    HADOOP-9504 MetricsDynamicMBeanBase has concurrency issues in createMBeanInfo. 
    (Liang Xie and Jason Lowe, via mattf)

    MAPREDUCE-5206. Ensure that a job doesn't get added to RetiredJobs
    multiple times in JobTracker. (acmurthy)

    MAPREDUCE-5148. Fix MAPREDUCE-4970 to ensure task-log4j.properties is
    available for previous installs by putting it in hadoop-core.jar.
    (acmurthy)

    MAPREDUCE-3859. Fix CapacityScheduler to correctly compute runtime queue
    limits for high-ram jobs. (Sergey Tryuber via acmurthy)

    HDFS-4581. DataNode.checkDiskError should not be called on network errors.
    (Rohit Kochar via kihwal)

    HDFS-4699. Additional conditions for avoiding unnecessary 
    DataNode.checkDiskError calls. (Chris Nauroth via kihwal)

    HDFS-4261. Fix bugs in Balaner causing infinite loop and
    TestBalancerWithNodeGroup timing out.  (Junping Du via szetszwo)
