@@ -224,6 +224,9 @@ Release 1.3.0 - unreleased
     MAPREDUCE-5877. Inconsistency between JT/TT for tasks taking a long time to
     launch (Karthik Kambatla via Sandy Ryza)
 
+    MAPREDUCE-5777. Support utf-8 text with BOM (byte order marker) 
+    (Zhihai Xu via kasha)
+
 Release 1.2.2 - unreleased
 
   INCOMPATIBLE CHANGES
